--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-rootProject.name = 'project_name'
+rootProject.name = 'truth_simple_kmp_logger'
 
 String[] includes = [
-    ":lib"
+    ":logger"
 ]
 
 
