--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,3 @@
-rootProject.name = 'truth_simple_kmp_logger'
-
-String[] includes = [
-    ":logger"
-]
-
-
-includes.each { originalName ->
-    String projectDirectory = "${rootProject.projectDir.getAbsolutePath()}${originalName.replace(":", File.separator)}"
-    String projectName = "${rootProject.name}${originalName.replace(":", ".")}"
-    String projectIdentifier = ":${projectName}"
-    include projectIdentifier
-    ProjectDescriptor project = project(projectIdentifier)
-    project.name = projectName
-    project.projectDir = new File(projectDirectory)
-}
+rootProject.name = 'kslog'
 
 enableFeaturePreview("VERSION_CATALOGS")
