add publication workaround

--- a/build.gradle
+++ b/build.gradle
@@ -82,4 +82,5 @@ java {
 
 apply from: "defaultAndroidSettings.gradle"
 
-// apply from: "./github_release.gradle"
+apply from: "./github_release.gradle"
+apply from: "./publish.gradle"
