--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ android-minSdk = "21"
 android-compileSdk = "32"
 android-buildTools = "32.0.0"
 
+github-release = "2.3.7"
+
 [libraries]
 
 kotlin = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -28,6 +30,7 @@ android-tools-build = { module = "com.android.tools.build:gradle", version.ref =
 android-dexcount = { module = "com.getkeepsafe.dexcount:dexcount-gradle-plugin", version.ref = "dexcount" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "kotlin" }
+github-release = { module = "com.github.breadmoirai:github-release", version.ref = "github-release" }
 
 [plugins]
 
