--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath libs.android.dexcount
         classpath libs.kotlin.gradle.plugin
         classpath libs.kotlin.dokka.plugin
+        classpath libs.github.release
     }
 }
 
