add native platforms support

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ kotlin {
     android {
         publishAllLibraryVariants()
     }
+    linuxArm64()
+    linuxArm32Hfp()
+    linuxX64()
+    wasm32()
+    mingwX64()
+    mingwX86()
 
     sourceSets {
         commonMain {
