--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ kotlin.incremental=true
 kotlin.incremental.js=true
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx196m
 
 # Project data
 
