--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ kotlin {
     }
     android {
         publishAllLibraryVariants()
+        compilations.all {
+            kotlinOptions {
+                jvmTarget = "1.8"
+            }
+        }
     }
     linuxArm64()
     linuxArm32Hfp()
