--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,26 @@ buildscript {
         google()
         mavenCentral()
         mavenLocal()
-        maven { setUrl("https://plugins.gradle.org/m2/") }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
+
     dependencies {
-        classpath (libs.android.tools.build)
-        classpath (libs.android.dexcount)
-        classpath (libs.kotlin.gradle.plugin)
-        classpath (libs.kotlin.dokka.plugin)
-        classpath (libs.github.release)
+        classpath libs.android.tools.build
+        classpath libs.android.dexcount
+        classpath libs.kotlin.gradle.plugin
+        classpath libs.kotlin.dokka.plugin
+        classpath libs.github.release
     }
 }
+
+
 plugins {
     alias(libs.plugins.kotlin.multiplatform)
     alias(libs.plugins.kotlin.dokka)
     alias(libs.plugins.versions)
 }
 
-apply(plugin = "com.android.library")
+apply plugin: "com.android.library"
 
 project.version = "$version"
 project.group = "$group"
@@ -32,7 +35,7 @@ repositories {
 
 kotlin {
     jvm {
-        compilations.all {
+        compilations.main {
             kotlinOptions {
                 jvmTarget = "1.8"
             }
@@ -65,14 +68,14 @@ kotlin {
     sourceSets {
         commonMain {
             dependencies {
-                implementation(libs.kotlin)
+                implementation libs.kotlin
             }
         }
         commonTest {
             dependencies {
-                implementation (libs.kotlin.test.common)
-                implementation (libs.kotlin.test.annotations.common)
-                implementation (libs.kotlin.test.junit)
+                implementation libs.kotlin.test.common
+                implementation libs.kotlin.test.annotations.common
+                implementation libs.kotlin.test.junit
             }
         }
     }
@@ -83,7 +86,8 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-apply (from = "defaultAndroidSettings.gradle")
-apply (from = "github_release.gradle")
-apply (from = "publish.gradle")
-apply (from = "dokka.gradle")
+apply from: "defaultAndroidSettings.gradle"
+
+apply from: "github_release.gradle"
+apply from: "publish.gradle"
+apply from: "dokka.gradle"
