--- a/build.gradle
+++ b/build.gradle
@@ -90,10 +90,10 @@ apply from: "github_release.gradle"
 apply from: "publish.gradle"
 apply from: "dokka.gradle"
 
-def publishTasks = tasks.findAll { it.name.containsIgnoreCase("publish") }
-def signTasks = tasks.findAll { it.name.containsIgnoreCase("sign") }
-publishTasks.forEach { task ->
-    signTasks.forEach {
-        task.dependsOn(it)
-    }
-}
+//def publishTasks = tasks.findAll { it.name.containsIgnoreCase("publish") }
+//def signTasks = tasks.findAll { it.name.containsIgnoreCase("sign") }
+//publishTasks.forEach { task ->
+//    signTasks.forEach {
+//        task.dependsOn(it)
+//    }
+//}
