--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 
-kotlin = "1.9.20-RC"
+kotlin = "1.9.20"
 kotlin-gradle-plugin = "7.4.2"
 
-versions = "0.48.0"
+versions = "0.49.0"
 
 dokka = "1.9.10"
 
