--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ test_ext_junit_version = "1.2.1"
 espresso_core = "3.6.1"
 
 android-minSdk = "21"
-android-compileSdk = "35"
+android-compileSdk = "35"-
 android-buildTools = "35.0.0"
 
 github-release = "2.5.2"
