--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 
-kotlin = "2.0.10"
-kotlin-gradle-plugin = "8.3.2"
+kotlin = "2.0.20"
+kotlin-gradle-plugin = "8.2.2"
 
 versions = "0.51.0"
 
@@ -13,7 +13,7 @@ test_ext_junit_version = "1.2.1"
 espresso_core = "3.6.1"
 
 android-minSdk = "21"
-android-compileSdk = "35"-
+android-compileSdk = "35"
 android-buildTools = "35.0.0"
 
 github-release = "2.5.2"
