--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 
-kotlin = "2.2.0"
-kotlin-gradle-plugin = "8.2.2"
+kotlin = "2.2.20"
+kotlin-gradle-plugin = "8.10.+"
 
-nmcp = "1.0.0-rc.1"
+nmcp = "1.2.0"
 versions = "0.51.0"
 
 dokka = "2.0.0"
 
 dexcount = "4.0.0"
 junit_version = "4.12"
-test_ext_junit_version = "1.2.1"
-espresso_core = "3.6.1"
+test_ext_junit_version = "1.3.0"
+espresso_core = "3.7.0"
 
 android-minSdk = "21"
 android-compileSdk = "36"
