--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,10 @@ kotlin {
         nodejs()
     }
     androidTarget {
-        publishAllLibraryVariants()
+        publishLibraryVariants(
+            "release",
+            "debug",
+        )
         compilations.all {
             kotlinOptions {
                 jvmTarget = "17"
